# application-development-homework

./: .pre-commit-config.yaml  .pylintrc
Lab1/: docker-compose.yml
Lab2/: alembic.ini  docker-compose.yml  main.py  pyproject.toml
Lab2/crud/: address.py  order.py  product.py  user.py
Lab2/db/: session.py
Lab3/: README.md  docker-compose.yml
Lab3/src/: Dockerfile  create_tables.py  main.py  pyproject.toml
Lab3/src/controllers/: user_controller.py
Lab3/src/models/: user.py
Lab3/src/repositories/: user_repository.py
Lab3/src/schemas/: user.py
Lab3/src/services/: user_service.py
Lab4/: .dockerignore  docker-compose.yml  pyproject.toml
Lab4/src/: Dockerfile  create_tables.py  entrypoint.sh  main.py
Lab4/src/controllers/: order_controller.py  product_controller.py  user_controller.py
Lab4/src/models/: order.py  product.py  user.py
Lab4/src/repositories/: order_repository.py  product_repository.py  user_repository.py
Lab4/src/schemas/: order.py  user.py
Lab4/src/services/: order_service.py  product_service.py
Lab4/src/utils/: db_error_handler.py
Lab4/tests/: test_order_repository.py  test_product_repository.py  test_user_repository.py
Lab5/: pyproject.toml
Lab5/alembic/: env.py
Lab5/src/: Dockerfile  (+1 more)
Lab6/: README.md  docker-compose.yml  pyproject.toml
Lab7/: .gitignore  docker-compose.yml  pyproject.toml
Lab8/: docker-compose.yml  pyproject.toml  redis_example.py  test_system.py
Lab8/alembic/versions/: 4159f8afee9f_create_order_reports_view.py  453659de82b0_add_timestamps_to_orders.py  a3853528df4f_initial_migration.py
Lab8/src/: entrypoint.sh  main.py
Lab8/src/controllers/: order_controller.py  report_controller.py
Lab8/src/messaging/: __init__.py  broker.py  product.py  taskiq_broker.py
Lab8/src/messaging/tasks/: __init__.py  report.py
Lab8/src/models/: order.py  order_report.py  user.py
Lab8/src/repositories/: order_repository.py  report_repository.py
Lab8/src/services/: cache_service.py  product_service.py  report_service.py  user_service.py
Lab8/tests/: conftest.py  test_order_repository.py  test_order_service.py  test_product_controller.py
(+44 files in other folders)
