[project]
name = "lab8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.4.3",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "black>=25.11.0",
    "fast-depends>=3.0.5",
    "faststream[rabbit]>=0.6.4",
    "isort>=7.0.0",
    "litestar[standard]>=2.18.0",
    "polyfactory>=3.0.0",
    "pre-commit>=4.5.0",
    "pydantic[email]>=2.12.4",
    "pylint>=4.0.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "redis>=7.0.1",
    "ruff>=0.14.8",
    "sniffio>=1.3.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "taskiq>=0.12.1",
    "taskiq-aio-pika>=0.5.0",
    "taskiq-redis>=1.2.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--verbose --color=yes"

[tool.isort]
profile = "black"
known_first_party = ["src"]
skip = []

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| docker
| config
| temp
| src/desc/repository/sqlalchemy/migration/alembic
)/
'''
